<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.1</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>io.realworld</groupId>
  <artifactId>backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Sprint Boot Backend</name>
  <description>Realworld backed implementation</description>
  <properties>
    <java.version>21</java.version>
    <project-base-package>io.realworld.backend</project-base-package>
    <spring.boot.mainclass>io.realworld.backend.BackendApplication</spring.boot.mainclass>
    <!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 is fixed). -->
    <animal.sniffer.skip>true</animal.sniffer.skip>
    <!-- Dependency versions: -->
    <jjwt.version>0.13.0</jjwt.version>
    <checkerframework.version>3.49.0</checkerframework.version>
    <checker-guava.version>33.1.0.2-jre</checker-guava.version>
    <guava-failureaccess.version>1.0.3</guava-failureaccess.version>
    <lombok-version>1.18.42</lombok-version>
  </properties>
    <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>me.paulschwarz</groupId>
        <artifactId>spring-dotenv-bom</artifactId>
        <version>5.0.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <!-- Spring dependencies: -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Other dependencies: -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker</artifactId>
      <version>${checkerframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker-qual</artifactId>
      <version>${checkerframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker-util</artifactId>
      <version>${checkerframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.checkerframework.annotatedlib</groupId>
      <artifactId>guava</artifactId>
      <version>${checker-guava.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>failureaccess</artifactId>
      <version>${guava-failureaccess.version}</version>
    </dependency>
   <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>3.0.0</version>
   </dependency>
	<dependency>
	    <groupId>jakarta.xml.bind</groupId>
	    <artifactId>jakarta.xml.bind-api</artifactId>
	</dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>
    <dependency>
      <groupId>org.openapitools</groupId>
      <artifactId>jackson-databind-nullable</artifactId>
      <version>0.2.1</version>
    </dependency>
    <!-- Bean Validation API support -->
	<dependency>
	    <groupId>jakarta.validation</groupId>
	    <artifactId>jakarta.validation-api</artifactId>
	    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
	</dependency>
	<dependency>
      <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-actuator</artifactId>
  </dependency>
	<!-- postgres db-->
	  <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <scope>runtime</scope>
  	  </dependency>
      <!-- env vars-->
  <dependency>
      <groupId>me.paulschwarz</groupId>
      <artifactId>springboot4-dotenv</artifactId>
  </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <mainClass>${spring.boot.mainclass}</mainClass>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <!-- RELEASE_VERSION -->
        <version>7.17.0</version>
        <!-- /RELEASE_VERSION -->
        <configuration>
          <inputSpec>${project.basedir}/api/swagger.json</inputSpec>
          <generatorName>spring</generatorName>
          <globalProperties>
              <useJakartaEe>true</useJakartaEe>
          </globalProperties>
          <configOptions>
            <sourceFolder>src/gen/java/main</sourceFolder>
            <delegatePattern>true</delegatePattern>
            <useSpringBoot3>true</useSpringBoot3>
            <useJakartaEe>true</useJakartaEe>
            <apiPackage>${project-base-package}.rest.api</apiPackage>
            <modelPackage>${project-base-package}.rest.api</modelPackage>
            <configPackage>${project-base-package}.rest.swagger</configPackage>
            <invokerPackage>${project-base-package}.rest.swagger</invokerPackage>
          </configOptions>
		  <additionalProperties>
		    <additionalProperty>modelNameSuffix=Data</additionalProperty>
          </additionalProperties>
          <skipOperationExample>true</skipOperationExample>
	    <generateApis>true</generateApis>
	    <generateModels>true</generateModels>
	    <generateSupportingFiles>false</generateSupportingFiles>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
<groupId>com.diffplug.spotless</groupId>
       <artifactId>spotless-maven-plugin</artifactId>
 		<version>2.43.0</version>
		 <configuration>                                                                                                                                                                                          
 			<java>                                                                                                                                                                                                 
 			<googleJavaFormat>                                                                                                                                                                                   
	 			<version>1.24.0</version>                                                                                                              
	 			<style>GOOGLE</style>                                                                                                                                                                              
 			</googleJavaFormat>                                                                                                                                                                                  
		 </java>                                                                                                                                                                                                
 		</configuration>                             
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
          <compilerArgs>
            <arg>-verbose</arg>
            <arg>-Xlint:all,-options,-path</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok-version}</version>
            </path>
            <path>
              <groupId>org.checkerframework</groupId>
              <artifactId>checker</artifactId>
              <version>${checkerframework.version}</version>
            </path>
          </annotationProcessorPaths>
                    <!-- 
			          <annotationProcessors>
            Add all the checkers you want to enable here 
            <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
          </annotationProcessors>
		  -->

		  <compilerArgs>
		    <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
		    <arg>-AskipDefs=io.realworld.backend.rest.api</arg>
		  </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
	    <configuration>
	        <configLocation>google_checks.xml</configLocation>
	        <failsOnError>true</failsOnError>
	        <consoleOutput>true</consoleOutput>
	        <outputFile>${project.build.directory}/checkstyle/checkstyle-report.xml</outputFile>
	    </configuration>

        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.28.0</version> <!-- or use version from pluginManagement -->
        <configuration>
          <!-- failOnViolation is actually true by default, but can be disabled -->
          <failOnViolation>false</failOnViolation>
          <!-- printFailingErrors is pretty useful -->
          <printFailingErrors>true</printFailingErrors>
          <verbose>true</verbose>
          <minimumTokens>60</minimumTokens>
		  <rulesets>
		    <ruleset>/category/java/bestpractices.xml</ruleset>
		    <ruleset>/category/java/errorprone.xml</ruleset>
		    <ruleset>/category/java/codestyle.xml</ruleset>
		    <ruleset>${basedir}/pmd-ruleset.xml</ruleset>
		  </rulesets>
        </configuration>
	  <executions>
	    <execution>
	      <id>validate</id>
	      <phase>validate</phase>
	      <goals>
	        <goal>check</goal>
	        <goal>cpd-check</goal>
	      </goals>
	    </execution>
	  </executions>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.9.8.2</version>
        <executions>
          <execution>
            <id>process-classes</id>
            <!--It works on bytecode level, so let's start after byte code generation <-->
            <phase>process-classes</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludeFilterFile>${basedir}/spotbugs-exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.14</version>
        <configuration>                                                                                                                                                                                          
          <excludes>                                                                                                                                                                                             
            <!-- Exclude generated OpenAPI code -->                                                                                                                                                              
            <exclude>io/realworld/backend/rest/api/**</exclude>                                                                                                                                                  
          </excludes>                                                                                                                                                                                            
        </configuration> 
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.05</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jxr-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
      </plugins>
    </reporting>
</project>
